@@ -1,3 +1,9 @@
+2004-08-18  Jan Nieuwenhuizen  <janneke@gnu.org>
+
+	* lily/include/paper-book.hh
+	* lily/include/paper-system.hh: Finish renaming of paper-line to
+	system.  Fix users.
+
 2004-08-18  Han-Wen Nienhuys   <hanwen@xs4all.nl>
 
 	* lily/output-def.cc (assign_context_def): use set_variable().
